projet_GOCass/tests/bad/testfile-fmt-not-imported.go
package main

func main() {fmt.Print("a")}
